--- a/iOS/calagram/calagram/Base.lproj/Main.storyboard
+++ b/iOS/calagram/calagram/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MyZ-uj-3xC">
-                                <rect key="frame" x="141" y="269" width="38" height="30"/>
+                                <rect key="frame" x="141" y="95" width="38" height="30"/>
                                 <state key="normal" title="Login">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -25,12 +25,21 @@
                                     <action selector="LoginButtonTouched:" destination="I0i-LM-oBp" eventType="touchUpInside" id="0ch-o3-jes"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nXx-Qu-Ycd" customClass="FBLoginView">
+                                <rect key="frame" x="67" y="471" width="187" height="45"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GuX-DO-epd">
+                                <rect key="frame" x="40" y="139" width="240" height="251"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Login" id="BzT-hB-UCU"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
+                        <outlet property="facebookLoginView" destination="nXx-Qu-Ycd" id="5Kn-ng-ytN"/>
+                        <outlet property="tempImageView" destination="GuX-DO-epd" id="NE2-8a-bjq"/>
                         <segue destination="taa-gF-9Fd" kind="show" identifier="LoginToHomeSegue" id="m3E-OB-mdI"/>
                     </connections>
                 </viewController>
